# SecretLetersAPI

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py
src/letters/: repository.py  router.py  schemas.py  utils.py
